...
                ) : (
                    <>
                    <Text style={styles.modalTitle}>Send Message To Driver</Text>
                    <TextInput multiline numberOfLines={14} value={messageText} onChangeText={setMessageText} placeholder='Type your message here...' style={{borderWidth: 1, height: 140, borderColor: colors.secondary, borderRadius: 10, paddingHorizontal: 10, textAlignVertical: "top", backgroundColor: colors.secondaryText, fontSize: 13}} />
                    <View style={{flexDirection: "row", marginTop: 20, justifyContent: "center", gap: 10}}>
                        <TouchableOpacity onPress={() => setUserRequestStep(2)} style={{backgroundColor: colors.primary, paddingVertical: 6, paddingHorizontal: 15, borderRadius: 50}}>
                            <Text style={{color: "white", fontWeight: "500", fontSize: 12}}>Submit</Text>
                        </TouchableOpacity>
                        <TouchableOpacity onPress={() => setUserRequestStep(0)} style={{backgroundColor: colors.secondary, paddingVertical: 6, paddingHorizontal: 15, borderRadius: 50}}>
                            <Text style={{fontWeight: "500", fontSize: 12}}>Back</Text>
                        </TouchableOpacity>
                    </View>
                    </>
...
